--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-1.05MB/s(Youtube:不良林), server: 42.157.195.245, port: 12127, type: ssr, cipher: aes-256-cfb, password: 68xdgu9eyif, protocol: auth_aes128_sha1, obfs: http_simple, protocol-param: 600777:154T8b, obfs-param: 0f099600777.v23f7nM0}
-  - {name: 🇨🇳 中国-972.8KB/s(Youtube:不良林), server: 42.157.195.236, port: 12127, type: ssr, cipher: aes-256-cfb, password: 68xdgu9eyif, protocol: auth_aes128_sha1, obfs: http_simple, protocol-param: 600777:154T8b, obfs-param: 0f099600777.v23f7nM0}
-  - {name: 🇨🇳 中国-870.6KB/s(Youtube:不良林), server: 14.152.92.80, port: 12127, type: ssr, cipher: aes-256-cfb, password: 68xdgu9eyif, protocol: auth_aes128_sha1, obfs: http_simple, protocol-param: 600777:154T8b, obfs-param: 0f099600777.v23f7nM0}
-  - {name: 🇨🇦 加拿大-952.3KB/s(Youtube:不良林), server: ca-trojan.bonds.id, port: 443, type: trojan, password: a3fa5lWNFc1RmRBNk5NQU5KSnga3fa58ac5a3ef0-b4ab-11eb-b65e-1239d0255272, sni: ca-trojan.bonds.id, skip-cert-verify: true}
-  - {name: 🇨🇦 加拿大-1.29MB/s(Youtube:不良林), server: 138.197.166.205, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇺🇸 美国-504.0KB/s(Youtube:不良林), server: bai-piao-wang-zhe10.98848.xyz, port: 50858, type: trojan, password: 685022af-2086-454c-8725-8ff6b6ab1d13, sni: bai-piao-wang-zhe10.98848.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-4.44MB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30003, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
+  - {name: 🇫🇷 法国-1.60MB/s(Youtube:不良林), server: 54.37.192.112, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/120208301422, ws-headers: {Host: 54.37.192.112}}
   - {name: 🇯🇵 日本-3.37MB/s(Youtube:不良林), server: jgwdb1.gaox.ml, port: 443, type: trojan, password: a580d839-ee41-4df1-bf03-6789dca32e30, sni: jgwdb1.gaox.ml, skip-cert-verify: true}
+  - {name: 🇫🇷 法国-645.2KB/s(Youtube:不良林), server: 51.38.118.42, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇨🇦 加拿大-1.05MB/s(Youtube:不良林), server: 138.197.166.205, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇨🇳 中国-847.2KB/s(Youtube:不良林), server: 42.157.195.241, port: 12127, type: ssr, cipher: aes-256-cfb, password: 68xdgu9eyif, protocol: auth_aes128_sha1, obfs: http_simple, protocol-param: 600777:154T8b, obfs-param: 0f099600777.v23f7nM0}
   - {name: 🇺🇸 美国-3.38MB/s(Youtube:不良林), server: ss2.2046.gq, port: 4443, type: trojan, password: 794871c6-022b-4498-b816-296e8a581d86, sni: ss2.2046.gq, skip-cert-verify: true}
-  - {name: 🇸🇬 新加坡-860.1KB/s(Youtube:不良林), server: s4.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s4.hazz.win, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-2.76MB/s(Youtube:不良林), server: www.nubility.ml, port: 443, type: trojan, password: 9a2c5cc6ef, sni: www.nubility.ml, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-381.3KB/s(Youtube:不良林), server: bai-piao-wang-zhe10.98848.xyz, port: 22168, type: trojan, password: 685022af-2086-454c-8725-8ff6b6ab1d13, sni: bai-piao-wang-zhe10.98848.xyz, skip-cert-verify: true}
+  - {name: 🇷🇺 俄罗斯联邦-808.5KB/s(Youtube:不良林), server: 185.4.65.6, port: 21247, type: ss, cipher: aes-256-cfb, password: vDS9G2p}
+  - {name: 🇺🇸 美国-1.70MB/s(Youtube:不良林), server: v04.ssrsub.com, port: 153, type: vmess, uuid: fb61d738-ef95-446d-9004-c93a1a975cad, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /api/v3/download.getFile, ws-headers: {Host: v04.ssrsub.com}}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-1.05MB/s(Youtube:不良林)
-      - 🇨🇳 中国-972.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-870.6KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-952.3KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.29MB/s(Youtube:不良林)
-      - 🇺🇸 美国-504.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.44MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.60MB/s(Youtube:不良林)
       - 🇯🇵 日本-3.37MB/s(Youtube:不良林)
+      - 🇫🇷 法国-645.2KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.05MB/s(Youtube:不良林)
+      - 🇨🇳 中国-847.2KB/s(Youtube:不良林)
       - 🇺🇸 美国-3.38MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-860.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.76MB/s(Youtube:不良林)
+      - 🇺🇸 美国-381.3KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-808.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.70MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-1.05MB/s(Youtube:不良林)
-      - 🇨🇳 中国-972.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-870.6KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-952.3KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.29MB/s(Youtube:不良林)
-      - 🇺🇸 美国-504.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.44MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.60MB/s(Youtube:不良林)
       - 🇯🇵 日本-3.37MB/s(Youtube:不良林)
+      - 🇫🇷 法国-645.2KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.05MB/s(Youtube:不良林)
+      - 🇨🇳 中国-847.2KB/s(Youtube:不良林)
       - 🇺🇸 美国-3.38MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-860.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.76MB/s(Youtube:不良林)
+      - 🇺🇸 美国-381.3KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-808.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.70MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-1.05MB/s(Youtube:不良林)
-      - 🇨🇳 中国-972.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-870.6KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-952.3KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.29MB/s(Youtube:不良林)
-      - 🇺🇸 美国-504.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.44MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.60MB/s(Youtube:不良林)
       - 🇯🇵 日本-3.37MB/s(Youtube:不良林)
+      - 🇫🇷 法国-645.2KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.05MB/s(Youtube:不良林)
+      - 🇨🇳 中国-847.2KB/s(Youtube:不良林)
       - 🇺🇸 美国-3.38MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-860.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.76MB/s(Youtube:不良林)
+      - 🇺🇸 美国-381.3KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-808.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.70MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-1.05MB/s(Youtube:不良林)
-      - 🇨🇳 中国-972.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-870.6KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-952.3KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.29MB/s(Youtube:不良林)
-      - 🇺🇸 美国-504.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.44MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.60MB/s(Youtube:不良林)
       - 🇯🇵 日本-3.37MB/s(Youtube:不良林)
+      - 🇫🇷 法国-645.2KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.05MB/s(Youtube:不良林)
+      - 🇨🇳 中国-847.2KB/s(Youtube:不良林)
       - 🇺🇸 美国-3.38MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-860.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.76MB/s(Youtube:不良林)
+      - 🇺🇸 美国-381.3KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-808.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.70MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-1.05MB/s(Youtube:不良林)
-      - 🇨🇳 中国-972.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-870.6KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-952.3KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.29MB/s(Youtube:不良林)
-      - 🇺🇸 美国-504.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.44MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.60MB/s(Youtube:不良林)
       - 🇯🇵 日本-3.37MB/s(Youtube:不良林)
+      - 🇫🇷 法国-645.2KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.05MB/s(Youtube:不良林)
+      - 🇨🇳 中国-847.2KB/s(Youtube:不良林)
       - 🇺🇸 美国-3.38MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-860.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.76MB/s(Youtube:不良林)
+      - 🇺🇸 美国-381.3KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-808.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.70MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-1.05MB/s(Youtube:不良林)
-      - 🇨🇳 中国-972.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-870.6KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-952.3KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.29MB/s(Youtube:不良林)
-      - 🇺🇸 美国-504.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.44MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.60MB/s(Youtube:不良林)
       - 🇯🇵 日本-3.37MB/s(Youtube:不良林)
+      - 🇫🇷 法国-645.2KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.05MB/s(Youtube:不良林)
+      - 🇨🇳 中国-847.2KB/s(Youtube:不良林)
       - 🇺🇸 美国-3.38MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-860.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.76MB/s(Youtube:不良林)
+      - 🇺🇸 美国-381.3KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-808.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.70MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-1.05MB/s(Youtube:不良林)
-      - 🇨🇳 中国-972.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-870.6KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-952.3KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.29MB/s(Youtube:不良林)
-      - 🇺🇸 美国-504.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.44MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.60MB/s(Youtube:不良林)
       - 🇯🇵 日本-3.37MB/s(Youtube:不良林)
+      - 🇫🇷 法国-645.2KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.05MB/s(Youtube:不良林)
+      - 🇨🇳 中国-847.2KB/s(Youtube:不良林)
       - 🇺🇸 美国-3.38MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-860.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.76MB/s(Youtube:不良林)
+      - 🇺🇸 美国-381.3KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-808.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.70MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
