--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -6,10 +6,10 @@ log-level: info
 external-controller: :9090
 proxies:
   - {name: 🇫🇷 法国-754.5KB/s(Youtube:不良林), server: 51.38.118.42, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇨🇳 中国-3.41MB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30003, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-2.76MB/s(Youtube:不良林), server: www.nubility.ml, port: 443, type: trojan, password: 9a2c5cc6ef, sni: www.nubility.ml, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-1.70MB/s(Youtube:不良林), server: v04.ssrsub.com, port: 153, type: vmess, uuid: fb61d738-ef95-446d-9004-c93a1a975cad, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /api/v3/download.getFile, ws-headers: {Host: v04.ssrsub.com}}
+  - {name: 🇨🇳 中国-3.28MB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30003, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-2.96MB/s(Youtube:不良林), server: www.nubility.ml, port: 443, type: trojan, password: 9a2c5cc6ef, sni: www.nubility.ml, skip-cert-verify: true}
   - {name: 🇨🇳 中国-387.9KB/s(Youtube:不良林), server: 180.163.62.91, port: 10064, type: ss, cipher: aes-128-cfb, password: QazEdcTgb159@$*}
+  - {name: 🇬🇧 英国-1.96MB/s(Youtube:不良林), server: 88.150.137.201, port: 1021, type: ssr, cipher: aes-128-ctr, password: sEscPBiAD9K$&@79, protocol: auth_aes128_md5, obfs: tls1.2_ticket_auth, protocol-param: "", obfs-param: ""}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
@@ -17,20 +17,20 @@ proxy-groups:
       - ♻️ 自动选择
       - 🎯 全球直连
       - 🇫🇷 法国-754.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.41MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.76MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.70MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.28MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.96MB/s(Youtube:不良林)
       - 🇨🇳 中国-387.9KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.96MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
       - 🇫🇷 法国-754.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.41MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.76MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.70MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.28MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.96MB/s(Youtube:不良林)
       - 🇨🇳 中国-387.9KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.96MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
@@ -38,10 +38,10 @@ proxy-groups:
       - ♻️ 自动选择
       - 🎯 全球直连
       - 🇫🇷 法国-754.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.41MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.76MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.70MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.28MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.96MB/s(Youtube:不良林)
       - 🇨🇳 中国-387.9KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.96MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -53,20 +53,20 @@ proxy-groups:
       - 🎯 全球直连
       - 🔰 节点选择
       - 🇫🇷 法国-754.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.41MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.76MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.70MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.28MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.96MB/s(Youtube:不良林)
       - 🇨🇳 中国-387.9KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.96MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - 🇫🇷 法国-754.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.41MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.76MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.70MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.28MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.96MB/s(Youtube:不良林)
       - 🇨🇳 中国-387.9KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.96MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
@@ -74,10 +74,10 @@ proxy-groups:
       - 🎯 全球直连
       - ♻️ 自动选择
       - 🇫🇷 法国-754.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.41MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.76MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.70MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.28MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.96MB/s(Youtube:不良林)
       - 🇨🇳 中国-387.9KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.96MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -94,10 +94,10 @@ proxy-groups:
       - 🎯 全球直连
       - ♻️ 自动选择
       - 🇫🇷 法国-754.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.41MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.76MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.70MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.28MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.96MB/s(Youtube:不良林)
       - 🇨🇳 中国-387.9KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.96MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
