--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-1.05MB/s(Youtube:不良林), server: 104.166.135.10, port: 443, type: vmess, uuid: aba50dd4-5484-3b05-b14a-4661caf862d5, alterId: 4, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ws, ws-headers: {Host: 104.166.135.10}}
-  - {name: 🇬🇧 英国-1.89MB/s(Youtube:不良林), server: 88.150.137.201, port: 1021, type: ssr, cipher: aes-128-ctr, password: sEscPBiAD9K$&@79, protocol: auth_aes128_md5, obfs: tls1.2_ticket_auth, protocol-param: "", obfs-param: ""}
-  - {name: 🇺🇸 美国-970.0KB/s(Youtube:不良林), server: ss2.2046.gq, port: 4443, type: trojan, password: 794871c6-022b-4498-b816-296e8a581d86, sni: ss2.2046.gq, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-264.5KB/s(Youtube:不良林), server: s1.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s1.hazz.win, skip-cert-verify: true}
-  - {name: 🇫🇷 法国-1.45MB/s(Youtube:不良林), server: 54.37.192.112, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/120208301422, ws-headers: {Host: 54.37.192.112}}
-  - {name: 🇨🇳 中国-14.25MB/s(Youtube:不良林), server: 120.233.186.71, port: 3384, type: trojan, password: ca4596fb9bc63cf2, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-18.32MB/s(Youtube:不良林), server: 120.233.186.71, port: 3384, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-17.93MB/s(Youtube:不良林), server: 120.233.186.71, port: 3384, type: trojan, password: 9a27800ca7b52ee0, skip-cert-verify: true}
-  - {name: 🇷🇺 俄罗斯联邦-1.13MB/s(Youtube:不良林), server: 185.4.65.6, port: 21247, type: ss, cipher: aes-256-cfb, password: vDS9G2p}
-  - {name: 🇨🇳 中国-2.32MB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30003, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-2.17MB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30003, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-12.81MB/s(Youtube:不良林), server: 120.233.186.71, port: 3384, type: trojan, password: ca4596fb9bc63cf2, skip-cert-verify: true}
+  - {name: 🇦🇺 澳大利亚-1.33MB/s(Youtube:不良林), server: jgwxn3.gaox.ml, port: 443, type: trojan, password: cb43b7c2-b744-41c5-bcc2-fd7467b332cf, sni: jgwxn3.gaox.ml, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-2.49MB/s(Youtube:不良林), server: 152.69.202.245, port: 27614, type: vmess, uuid: a7fe18a9-8b49-43fb-ddde-b4934bf11862, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇩🇪 德国-1.20MB/s(Youtube:不良林), server: 162.55.231.78, port: 443, type: ssr, cipher: aes-128-ctr, password: sEscPBiAD9K$&@79, protocol: auth_aes128_md5, obfs: tls1.2_ticket_auth, protocol-param: "", obfs-param: ""}
+  - {name: 🇨🇳 中国-7.06MB/s(Youtube:不良林), server: 116.129.253.134, port: 3384, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-6.69MB/s(Youtube:不良林), server: 116.129.253.134, port: 3384, type: trojan, password: ca4596fb9bc63cf2, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-6.82MB/s(Youtube:不良林), server: 116.129.253.134, port: 3384, type: trojan, password: 9a27800ca7b52ee0, skip-cert-verify: true}
+  - {name: 🇳🇱 荷兰-1.24MB/s(Youtube:不良林), server: 104.255.65.112, port: 30718, type: vmess, uuid: f0f63386-d747-4d44-8d16-6e2d254f0ed3, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇳🇱 荷兰-1.06MB/s(Youtube:不良林), server: 104.255.65.112, port: 30718, type: vmess, uuid: f0f63386-d747-4d44-8d16-6e2d254f0ed3, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-1.05MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.89MB/s(Youtube:不良林)
-      - 🇺🇸 美国-970.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-264.5KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.45MB/s(Youtube:不良林)
-      - 🇨🇳 中国-14.25MB/s(Youtube:不良林)
-      - 🇨🇳 中国-18.32MB/s(Youtube:不良林)
-      - 🇨🇳 中国-17.93MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.13MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.32MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.17MB/s(Youtube:不良林)
+      - 🇨🇳 中国-12.81MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.33MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.49MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.20MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.06MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.69MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.82MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.24MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.06MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-1.05MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.89MB/s(Youtube:不良林)
-      - 🇺🇸 美国-970.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-264.5KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.45MB/s(Youtube:不良林)
-      - 🇨🇳 中国-14.25MB/s(Youtube:不良林)
-      - 🇨🇳 中国-18.32MB/s(Youtube:不良林)
-      - 🇨🇳 中国-17.93MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.13MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.32MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.17MB/s(Youtube:不良林)
+      - 🇨🇳 中国-12.81MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.33MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.49MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.20MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.06MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.69MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.82MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.24MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.06MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-1.05MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.89MB/s(Youtube:不良林)
-      - 🇺🇸 美国-970.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-264.5KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.45MB/s(Youtube:不良林)
-      - 🇨🇳 中国-14.25MB/s(Youtube:不良林)
-      - 🇨🇳 中国-18.32MB/s(Youtube:不良林)
-      - 🇨🇳 中国-17.93MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.13MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.32MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.17MB/s(Youtube:不良林)
+      - 🇨🇳 中国-12.81MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.33MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.49MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.20MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.06MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.69MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.82MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.24MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.06MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-1.05MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.89MB/s(Youtube:不良林)
-      - 🇺🇸 美国-970.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-264.5KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.45MB/s(Youtube:不良林)
-      - 🇨🇳 中国-14.25MB/s(Youtube:不良林)
-      - 🇨🇳 中国-18.32MB/s(Youtube:不良林)
-      - 🇨🇳 中国-17.93MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.13MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.32MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.17MB/s(Youtube:不良林)
+      - 🇨🇳 中国-12.81MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.33MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.49MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.20MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.06MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.69MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.82MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.24MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.06MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-1.05MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.89MB/s(Youtube:不良林)
-      - 🇺🇸 美国-970.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-264.5KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.45MB/s(Youtube:不良林)
-      - 🇨🇳 中国-14.25MB/s(Youtube:不良林)
-      - 🇨🇳 中国-18.32MB/s(Youtube:不良林)
-      - 🇨🇳 中国-17.93MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.13MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.32MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.17MB/s(Youtube:不良林)
+      - 🇨🇳 中国-12.81MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.33MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.49MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.20MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.06MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.69MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.82MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.24MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.06MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-1.05MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.89MB/s(Youtube:不良林)
-      - 🇺🇸 美国-970.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-264.5KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.45MB/s(Youtube:不良林)
-      - 🇨🇳 中国-14.25MB/s(Youtube:不良林)
-      - 🇨🇳 中国-18.32MB/s(Youtube:不良林)
-      - 🇨🇳 中国-17.93MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.13MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.32MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.17MB/s(Youtube:不良林)
+      - 🇨🇳 中国-12.81MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.33MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.49MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.20MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.06MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.69MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.82MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.24MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.06MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-1.05MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.89MB/s(Youtube:不良林)
-      - 🇺🇸 美国-970.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-264.5KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.45MB/s(Youtube:不良林)
-      - 🇨🇳 中国-14.25MB/s(Youtube:不良林)
-      - 🇨🇳 中国-18.32MB/s(Youtube:不良林)
-      - 🇨🇳 中国-17.93MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.13MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.32MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.17MB/s(Youtube:不良林)
+      - 🇨🇳 中国-12.81MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.33MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.49MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.20MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.06MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.69MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.82MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.24MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.06MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
